<resources>
    <string name="app_name">Services Example</string>
    <string name="retreive_data">Obtener Datos</string>
    <string name="endpoint_url">Endpoint URL</string>
    <string name="create_new">Nuevo Elemento</string>
    <string name="save">Guardar</string>
    <string name="go_back">Volver</string>
    <string name="title">Título</string>
    <string name="user_id">ID de Usuario</string>
    <string name="body">Contenido</string>
    <string name="getter_value">Tipo</string>
    <string name="jwt_token">JWT Token (opcional)</string>
</resources>